<resources>
    <string name="app_name">Gumukrejo 4.0</string>


    <string name="title_beranda">Beranda</string>
    <string name="title_pesan">Pesan</string>
    <string name="title_bantuan">Bantuan</string>
    <string name="title_akun">Akun</string>

    <string name="splash_name">DIGITAL VILLAGE</string>
    <string name="smartarthesis">Smart Arthesis</string>
    <string name="polling">Polling</string>
    <string name="museumdigital">Museum Digital</string>
    <string name="smartwarung">Smart Warung</string>

    <string name="greeting_login">Silahkan Masuk</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="login2">Login</string>
    <string name="forgotPassword">Lupa Password ?</string>
    <string name="text_register">Belum memiliki akun?</string>
    <string name="register">Daftar</string>

    <string name="forgotPasswordTitle">Lupa Password</string>
    <string name="nohandphone">No Handphone</string>
    <string name="reset">Reset</string>
    <string name="text_back">Sudah memiliki akun?</string>
    <string name="text_message_forgot_password">Silahkan periksa pesan anda</string>
    <string name="nama">Nama</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_success">Pendaftaran Berhasil</string>
    <string name="back">Kembali</string>
    <string name="saldo_anda">SALDO ANDA</string>
    <string name="topup">TopUp</string>
    <string name="topupplus">TopUp+</string>
    <string name="jml_pembelian">JUMLAH PEMBELIAN</string>
    <string name="liter_air">Liter Air</string>
    <string name="rupiah">RUPIAH</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="rupiah_sumbol">Rp</string>
    <string name="liter">LITER</string>
    <string name="transaksi_success">TRANSAKSI ANDA BERHASIL</string>
    <string name="message_pembelian">PEMBELIAN AIR BERSIH</string>
    <string name="message_open_keran">Nomor Keran yang Akan Terbuka</string>
    <string name="close">KELUAR</string>
    <string name="difitalsociety">Digital Society</string>
    <string name="lapor">Lapor</string>
    <string name="usulan">Usulan</string>
    <string name="survey">Survey</string>
    <string name="nomorpenting">Nomor Penting</string>
    <string name="admin">Admin</string>
    <string name="administrasi">Administrasi</string>
    <string name="lainnya">Lainnya</string>
    <string name="nik">NIK</string>
    <string name="pilih_pembayaran">Pilih Pembayaran</string>
    <string name="cash">Cash</string>
    <string name="virtual_account">Virtual Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tes">TesActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_id">User ID</string>
    <string name="no_telp">No Telp.</string>
    <string name="empty_inbox">Belum ada pesan masuk</string>
    <string name="changePassword">Ubah Password</string>
    <string name="transaction_history">Riwayat Transaksi</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="logout">Logout</string>
    <string name="konfirmasi_penndaftaran">Konfirmasi Pendaftaran</string>
    <string name="kode">Kode</string>
    <string name="konfirmasi">Konfirmasi</string>
</resources>
