<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flege.gumukrejo.main.AkunFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:hint="@string/user_id"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputUserID"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/useridbirupanca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_id">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/nik">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNIK"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_assignmentblue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nik">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/nama">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNama"
                    android:drawablePadding="5dp"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_accountnama"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/no_telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/no_telp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNoTelp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_notelponblue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/no_telp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="12dp"
                android:textSize="23sp"
                android:text="@string/changePassword" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/icon_play_black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/riwayat_transaksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/change_password">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="12dp"
                android:textSize="23sp"
                android:text="@string/transaction_history" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/icon_play_black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/logout"
            android:layout_below="@+id/riwayat_transaksi"
            android:layout_alignEnd="@+id/riwayat_transaksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/danger"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:textSize="23sp"
            android:text="@string/logout" />
    </LinearLayout>

</ScrollView>
